# lxi-tools

./: .gitignore  .gitmodules  .travis.yml  AUTHORS  COPYING  ChangeLog  LICENSE  Makefile.am  NEWS  README  README.md  TODO  configure.ac  meson.build  meson_options.txt  version.sh
.circleci/: config.yml
build-aux/meson/: postinstall.py
data/: io.github.lxi-tools.lxi-gui.appdata.xml  io.github.lxi-tools.lxi-gui.appdata.xml.in  io.github.lxi-tools.lxi-gui.desktop  io.github.lxi-tools.lxi-gui.gschema.xml  meson.build
doc/: lua-api.txt
examples/lua/: basics.lua  chart-gauge-angular.lua  chart-gauge-linear.lua  chart-line.lua  chart-number.lua  chart-scatter.lua  connect-raw.lua  connect-vxi11.lua  log.lua  multi-device.lua  psu-data-log.lua  test-automation.lua
examples/lua/lxi-proxy/: README.md  chart-gauge-angular.lua  chart-gauge-linear.lua  chart-line.lua  chart-number.lua  chart-scatter.lua  connect-selected.lua  connect-vxi11.lua  log.lua  lxi-gui-proxy-demo.lua  lxi-proxy-test.ui
examples/lua/lxi-proxy/client/: lxi-gui-api.lua
examples/lua/lxi-proxy/server/: lxi-proxy.lua
images/: note.txt
man/: Makefile.am  lxi.1  lxi.1.in  meson.build  rigol_1000z_screenshot.1
po/: meson.build
src/: .gitignore  Makefile.am  benchmark.c  benchmark.h  chart.c  chart.h  discover.c  discover.h  error.h  gtkchart.c  gtkchart.h  log.lua  lxi-tools.rc  lxi.c  lxi_gui-application.c  lxi_gui-application.h  lxi_gui-chart.ui  lxi_gui-instrument_dialog.ui  lxi_gui-main.c  lxi_gui-prefs.c  lxi_gui-prefs.h  lxi_gui-prefs.ui  lxi_gui-window-chart.ui  lxi_gui-window.c  lxi_gui-window.h  lxi_gui-window.ui  lxi_gui-window_list_widget_menu_model.ui  lxi_gui.css  lxi_gui.gresource.xml  lxilua.c  lxilua.h  main.c  meson.build  misc.c  misc.h  options.c  options.h  options.patch  rigol_1000z_screenshot.c  run.c  (+8 more)
src/bash-completion/: lxi  lxi.snap  meson.build
src/gtk/: help-overlay.ui
src/gui/: meson.build
src/gui/data/: io.github.lxi-tools.lxi-gui.appdata.xml.in  io.github.lxi-tools.lxi-gui.desktop.in  io.github.lxi-tools.lxi-gui.gschema.xml
src/gui/data/icons/: meson.build
src/gui/lxi-gui/: .gitignore  Makefile.am  lxi-gui.pro  lxi-gui.qrc  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  workerthread.cpp  workerthread.h
src/gui/po/: POTFILES
src/gui/src/: lxi_gui-application.c  lxi_gui-application.h  lxi_gui-prefs.c  lxi_gui-prefs.ui  lxi_gui-window.c  lxi_gui-window.h  lxi_gui-window.ui  lxi_gui.css  lxi_gui.gresource.xml  main.c  meson.build
src/include/: benchmark.h  discover.h  error.h  lxilua.h  meson.build  misc.h  options.h  run.h  scpi.h  screenshot.h
src/language-specs/: lua-lxi-gui.lang
src/plugins/: screenshot_keysight-dmm.c  screenshot_keysight-dso.c  screenshot_keysight-ivx.c  screenshot_keysight-psa.c  screenshot_keysight-pxa.c  screenshot_keysight.c  screenshot_lecroy.c  screenshot_rigol-1000.c  screenshot_rigol-1000z.c  screenshot_rigol-2000.c  screenshot_rigol-dg.c  screenshot_rigol-dg4000.c  screenshot_rigol-dl3000.c  screenshot_rigol-dm3000.c  screenshot_rigol-dm3068.c  screenshot_rigol-dp800.c  screenshot_rigol-dsa.c  screenshot_rigol-dsa700.c  screenshot_rigol-dsa800.c  screenshot_rigol.c  screenshot_rohde-schwarz-fsv.c  screenshot_rohde-schwarz-hmo-rtb.c  screenshot_rohde-schwarz-hmo1000.c  screenshot_rohde-schwarz-ng.c  screenshot_rohde-schwarz-rth.c  screenshot_rohde-schwarz.c  screenshot_siglent-sdg.c  screenshot_siglent-sdm3000.c  screenshot_siglent-sds.c  screenshot_siglent-sds1000.c  screenshot_siglent-sds1000x.c  screenshot_siglent-ssa3000x.c  screenshot_tektronix-3000.c  screenshot_tektronix-mso-5.c  screenshot_tektronix.c  screenshot_tektronix_3000.c
src/test/: basic-tests.lua  test.c  test.lua  test.scpi  test.sh
subprojects/: gtk.wrap  gtksourceview.wrap  libadwaita.wrap
test/: basic-tests.lua  basics.lua  chart-line.lua  chart-number.lua  multi-device.lua  psu-data-log.lua  sine-wave-plot.lua  test.lua  test.scpi  test.sh
test/lua/: basics.lua  chart-gauge-angular.lua  chart-gauge-linear.lua  chart-line.lua  chart-number.lua  chart-scatter.lua  log-test.lua  log.lua  multi-device.lua  psu-data-log.lua
